# python-charmd

./: .gitignore  README.md  charmd.py  pychmdbg.py  pyproject.toml  setup.py
.github/: pypi-github-actions-best-practices.md
.github/workflows/: ci.yml  publish.yml
pychmdbg/: __init__.py  __main__.py
src/charmd/: __init__.py  __main__.py
src/pychmdbg/: __main__.py
tests/: __init__.py  test_charmd.py
