[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charmd"
description = "CLI to start a PyCharm debug session and then run a Python target in-process"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "python-charmd contributors" } ]
keywords = ["pycharm", "debug", "pydevd", "debugger", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Debuggers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "Operating System :: OS Independent",
]
# Single-source version and provide README as long description
# (intentionally no static `version = "..."` here)
dynamic = ["version"]
readme = { file = "README.md", content-type = "text/markdown" }

# pydevd-pycharm is NOT a dependency.
# When using pycharm, it provides its own version of the module specific to the running ide.
dependencies = []

[project.urls]
Homepage = "https://github.com/TekWizely/python-charmd"
Repository = "https://github.com/TekWizely/python-charmd"
Issues = "https://github.com/TekWizely/python-charmd/issues"
Changelog = "https://github.com/TekWizely/python-charmd/releases"

[project.scripts]
charmd = "charmd.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["charmd*"]

[tool.setuptools.package-dir]
charmd = "src/charmd"

[tool.setuptools]
license-files = ["LICENSE*", "COPYING*"]

[tool.setuptools.dynamic]
version = { attr = "charmd.__version__" }
